# metafab-rust

./: Cargo.toml  README.md
.openapi-generator/: FILES
docs/: ApproveEcosystemGameRequest.md  AuthGame200Response.md  AuthGame200ResponseAllOf.md  AuthGame200ResponseAllOf1.md  AuthPlayer200Response.md  AuthPlayer200ResponseAllOf.md  AuthProfile200Response.md  BatchMintCollectionItemsRequest.md  BatchTransferCollectionItemsRequest.md  BatchTransferCurrencyRequest.md  BurnCollectionItemRequest.md  BurnCurrencyRequest.md  CollectionItem.md  CollectionItemAttributesInner.md  CollectionItemAttributesInnerValue.md  CollectionModel.md  ContractModel.md  ContractsApi.md  CreateCollection200Response.md  CreateCollection200ResponseAllOf.md  CreateCollection200ResponseAllOfContract.md  CreateCollection200ResponseAllOfContractAllOf.md  CreateCollectionItemRequest.md  CreateCollectionItemRequestAttributesInner.md  CreateCollectionItemRequestAttributesInnerValue.md  CreateCollectionRequest.md  CreateContractRequest.md  CreateCurrency200Response.md  CreateCurrency200ResponseAllOf.md  CreateCurrency200ResponseAllOfContract.md  CreateCurrency200ResponseAllOfContractAllOf.md  CreateCurrencyRequest.md  CreateEcosystemRequest.md  CreateExchange200Response.md  CreateExchangeRequest.md  CreateGameRequest.md  CreateLootboxManager200Response.md  CreateLootboxManagerRequest.md  CreatePlayerRequest.md  CreateProfilePlayerRequest.md  (+78 more)
src/apis/: configuration.rs  contracts_api.rs  currencies_api.rs  ecosystems_api.rs  exchanges_api.rs  games_api.rs  items_api.rs  lootboxes_api.rs  mod.rs  (+4 more)
(+108 files in other folders)
