[package]
name = "metafab"
version = "1.5.1"
authors = ["metafabproject@gmail.com"]
description = "Complete MetaFab API references and guides can be found at: https://trymetafab.com"
# Override this license by providing a License Object in the OpenAPI.
license = "Unlicense"
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
